--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duck Forum</title>
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ramaraja&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 
@@ -13,13 +16,16 @@
         <section class="form-section">
             <form action="">
                 <label for="name">FULL NAME</label>
-                <input type="text" id="name" placeholder="Your Name">
+                <input type="text" id="name" name="name">
 
                 <label for="email">EMAIL</label>
-                <input type="email" id="email" placeholder="Your Email">
+                <input type="email" id="email" name="email" placeholder="Your Email">
+
+                <label for="message-regarding">MESSAGE REGARDING </label>
+                <textarea id="message-regarding" name="message-regarding"></textarea>
 
                 <label for="message">YOUR MESSAGE </label>
-                <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                <textarea id="message" name="message" placeholder="Your Message"></textarea>
 
                 <button type="submit">SEND MESSAGE</button>
             </form>
