--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </section>
 
         <section class="image-section">
+            <div class="orange-bg"></div>
             <img src="./images/duck.png" alt="rubber duck" id="rubber-duck-image">
         </section>
     </main>
