--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <section class="form-section">
             <form action="">
                 <label for="name">FULL NAME</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name" required>
 
                 <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email" placeholder="Your Email">
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
 
                 <label for="message-regarding">MESSAGE REGARDING </label>
-                <textarea id="message-regarding" name="message-regarding"></textarea>
+                <textarea id="message-regarding" name="message-regarding" required></textarea>
 
                 <label for="message">YOUR MESSAGE </label>
-                <textarea id="message" name="message" placeholder="Your Message"></textarea>
+                <textarea id="message" name="message" placeholder="Your Message" required></textarea>
 
                 <button type="submit">SEND MESSAGE</button>
             </form>
